--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 8000",
+    "start": "node server.js",
     "lint": "next lint",
     "analyze": "ANALYZE=true next build"
   },
